Get images working

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+
 import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
@@ -7,12 +9,30 @@ import FormattedDate from "../components/FormattedDate.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, image } =
+  Astro.props;
+
+// Helper function to get image source and alt text from either format
+const getImageData = () => {
+  if (heroImage) {
+    return { src: heroImage, alt: "" };
+  }
+  if (image) {
+    return { src: image.path, alt: image.alt };
+  }
+  return null;
+};
+
+const imageData = getImageData();
 ---
 
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
+    <BaseHead
+      title={title}
+      description={description}
+      image={imageData?.src as string}
+    />
     <style>
       main {
         width: calc(100% - 2em);
@@ -63,15 +83,20 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       <article>
         <div class="hero-image">
           {
-            heroImage && (
-              <img width={1020} height={510} src={heroImage} alt="" />
+            imageData && (
+              <Image
+                width={1020}
+                height={510}
+                src={imageData.src as string}
+                alt={imageData.alt}
+              />
             )
           }
         </div>
         <div class="prose">
           <div class="title">
             <div class="date">
-              <FormattedDate date={pubDate} />
+              <FormattedDate date={pubDate || new Date()} />
               {
                 updatedDate && (
                   <div class="last-updated-on">
