--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -68,7 +68,7 @@ const getImageData = (post: any) => {
       }
       .title {
         margin: 0;
-        color: rgb(var(--black));
+        /* color: rgb(var(--black)); */
         line-height: 1;
       }
       .date {
