--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,7 +10,7 @@ import FormattedDate from "../components/FormattedDate.astro";
 import TableOfContents from "../components/TableOfContents.astro";
 
 type Props = CollectionEntry<"blog">["data"] & {
-  headings: MarkdownHeading[];
+  headings?: MarkdownHeading[];
 };
 
 const { title, description, pubDate, updatedDate, heroImage, image, headings } =
@@ -81,13 +81,13 @@ const imageData = getImageData();
 
       /* Responsive adjustments for ToC */
       @media (max-width: 1279px) {
-        .prose {
+        /* .prose {
           grid-template-columns: 1fr;
           gap: 1rem;
         }
         .prose > :global(*) {
           grid-column: 1;
-        }
+        } */
         .title {
           grid-column: 1 !important;
         }
@@ -129,7 +129,7 @@ const imageData = getImageData();
           <div class="content-with-toc" style="position: relative;">
             <slot />
           </div>
-          <TableOfContents headings={headings} />
+          <TableOfContents headings={headings || []} />
         </div>
       </article>
     </main>
