--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,7 +52,8 @@ import { SITE_TITLE } from "../consts";
     gap: 1rem;
   }
   nav a {
-    padding: 1em 0.5em;
+    padding: 0.5em;
+    font-size: 1em;
     color: rgb(var(--black));
     border-bottom: 4px solid transparent;
     text-decoration: none;
